# id24editor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: controller.py  doomdata.py  editconditions.ui  lumpsdialog.ui  main.py  mainwindow.ui  model.py  sbardef.py  view.py
